# expense_cli

./: .gitignore  CLAUDE.md  IDEAS.md  README.md  pyproject.toml  requirements.txt
.claude/: launch.json  settings.local.json
.claude/agent-memory/technical-roadmap-architect/: MEMORY.md  project_architecture.md  project_roadmap.md  user_profile.md
.claude/agents/: technical-roadmap-architect.md
examples/: categories.toml  counterparties.toml
examples/banks/: german_bank.toml  simple_bank.toml
expense_cli/: __init__.py  __main__.py  categorizer.py  cli.py  duplicates.py  identifier.py  importer.py  storage.py  toml_store.py  utils.py
tests/: conftest.py  test_categorizer.py  test_cli.py  test_identifier.py  test_importer.py  test_storage.py  test_toml_store.py
